# handreceipt_dual_use

./: .gitignore  .watchmanconfig  Cargo.toml  LICENSE  README.md  build_rs_cov.profraw  docker-compose.yml  migrate.sh  output.txt  package-lock.json  package.json  sawtooth-deployment.yaml  terminal  update-imports.sh
backend/: .env  .gitignore  CLEANUP.md  CLEANUP_FINAL.md  CLEANUP_REVISED.md  Cargo.toml  README.md  TODO.md  cargo-audit.toml  debug.toml
backend/.cargo/: audit.toml  config.toml
backend/backups/src/: api.rs  health_handlers.rs
backend/config/: validator.toml
backend/docs/: api.md
backend/migrations/: 20231125_initial_schema.sql  20231126000001_fix_schema.sql  20240101_001_create_assets_schema.sql  20240101_003_create_transfer_schema.sql  Cargo.toml
backend/migrations/migrations/: 20240101_001_create_assets_schema.sql  20240101_002_add_transfer_tables.sql  20240101_003_create_transfer_schema.sql
backend/migrations/src/: main.rs
backend/scripts/: cleanup.sh  debug-middleware.sh  debug-run.sh  debug-test.sh  manual-test.sh  run-all-tests.sh  test-blockchain.sh  test-nft.sh
backend/src/: api.rs  app_builder.rs  core.rs  error.rs  lib.rs  main.rs  prelude.rs
backend/src/actors/: mod.rs  websocket_actor.rs
backend/src/api/: mod.rs
backend/src/api/auth/: access_control.rs  merkle.rs  mod.rs  security.rs
backend/src/api/handlers/: health.rs  mobile.rs  mod.rs  property.rs  property_handler.rs  transfer.rs  user.rs
backend/src/api/middleware/: auth.rs  error_handler.rs  mod.rs  types.rs  validation.rs
backend/src/api/routes/: mobile.rs  mod.rs  transfer.rs
backend/src/api/types/: mod.rs  response.rs
backend/src/application/: mod.rs
backend/src/application/property/: commands.rs  mod.rs  qr.rs  queries.rs  validation.rs
backend/src/application/services/: mod.rs  property_service.rs  property_transfer_service.rs  qr_service.rs  transfer_service.rs
backend/src/application/transfer/: commands.rs  mod.rs  validation.rs
backend/src/blockchain/: mod.rs  service.rs  types.rs
backend/src/blockchain/consensus/: mechanism.rs  mod.rs  validator.rs
backend/src/blockchain/network/: mod.rs
backend/src/blockchain/transaction/: mod.rs  processing.rs  verification.rs
backend/src/config/: mesh_config.rs  mod.rs
backend/src/domain/: error.rs  mod.rs
backend/src/domain/entities/: property.rs  transfer.rs
backend/src/domain/models/: history.rs  location.rs  mod.rs  qr.rs  transfer.rs  user.rs  verification.rs
backend/src/domain/property/: entity.rs  mod.rs  repository.rs  service.rs  service_impl.rs  service_wrapper.rs  (+1 more)
backend/src/error/: api.rs  audit.rs  blockchain.rs  core.rs  database.rs  mod.rs  repository.rs  security.rs  validation.rs
backend/src/handlers/: asset_handlers.rs  health_handlers.rs  mod.rs  qr_handlers.rs  transfer_handlers.rs  user_handlers.rs  websocket_handlers.rs
backend/src/infrastructure/: mod.rs
backend/src/middleware/: auth.rs  debug.rs  error_handler.rs  mod.rs  rate_limit.rs  validation.rs  versioning.rs
backend/src/migrations/: mod.rs
backend/src/models/: asset.rs  blockchain.rs  error.rs  location.rs  mesh.rs  mod.rs  network.rs  qr.rs  scanning.rs  signature.rs  transfer.rs  types.rs
backend/src/security/: access_control.rs  auth.rs  context.rs  encryption.rs  key_management.rs  merkle.rs  mod.rs
backend/src/services/: mod.rs
backend/src/types/: app.rs  asset.rs  audit.rs  blockchain.rs  error.rs  mesh.rs  mod.rs  permissions.rs  property.rs  scanning.rs  security.rs  signature.rs  sync.rs  user.rs  validation.rs  verification.rs
backend/src/utils/: mod.rs
backend/tests/: Cargo.toml  middleware_test.toml  mod.rs
backend/tests/common/: mocks.rs  mod.rs
backend/tests/integration/: audit_trail_test.rs  blockchain_verification_test.rs  location_tracking_test.rs  mobile_workflow_test.rs  mod.rs  multi_device_test.rs  offline_sync_test.rs  sawtooth_integration_test.rs  scan_to_signature_test.rs  security_test.rs  transfer_edge_test.rs  transfer_workflow_test.rs
backend/tests/unit/: access_control_test.rs  core_test.rs  error_test.rs  mod.rs
backend/tools/diagnostics/: Cargo.toml
backup/rust/: Cargo.toml
backup/rust/src/: ffi.rs  lib.rs
mobile/: .gitignore  Cargo.toml  app.json  babel.config.js  emulator.env  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
mobile/TempProject/: package-lock.json  package.json
mobile/TempProject/ios/: Podfile
mobile/android/: build.gradle  gradle.properties  settings.gradle
mobile/android/app/: build.gradle  debug.keystore
mobile/ios/: Podfile  build-rust-ios.sh
mobile/ios/HandReceipt/: AppDelegate.mm  HandReceipt-Bridging-Header.h  HandReceiptModule.swift  LaunchScreen.storyboard  QRCameraManager.swift  emulator.entitlements  handreceipt_mobile.modulemap
mobile/ios/HandReceipt.xcodeproj/: project.pbxproj
mobile/ios/HandReceipt.xcworkspace/: contents.xcworkspacedata
mobile/ios/HandReceiptTests/: HandReceiptTests.m
mobile/ios/TempProject.xcodeproj/: project.pbxproj
mobile/rust/: Cargo.toml  cbindgen.toml
mobile/rust/.cargo/: config.toml
mobile/rust/android-build/: CMakeLists.txt  build.rs
mobile/rust/ios-build/: module.modulemap  script.sh
mobile/rust/src/: error.rs  ffi.rs  lib.rs
mobile/scripts/: validate-emulator.sh
mobile/src/: App.tsx  lib.rs  service.rs
mobile/src/contexts/: AuthContext.tsx
mobile/src/features/: index.ts
mobile/src/hooks/: useAuth.ts  useNetworkStatus.ts  useTransferQueue.ts
mobile/src/native/: HandReceiptMobile.ts
mobile/src/navigation/: index.tsx
mobile/src/offline/: mod.rs  storage.rs
mobile/src/scanner/: mod.rs  qr.rs  rfid.rs
mobile/src/screens/: Login.tsx  Profile.tsx  PropertyDetails.tsx  PropertyList.tsx  QRGenerator.tsx  Scanner.tsx  TransferConfirmation.tsx
mobile/src/services/: api.ts
mobile/src/store/: index.ts
mobile/src/sync/: handler.rs  mod.rs  queue.rs
mobile/src/types/: auth.ts  env.d.ts  navigation.ts  qrcode.d.ts  scanner.ts  sync.ts
mobile/src/utils/: date.ts  diagnostics.ts  error-handler.ts
(+2046 files in other folders)
