# /Cargo.toml (workspace root)

[workspace]
members = [
    "backend",
    "mobile"
]
resolver = "2"

[workspace.dependencies]
# Web & Network
actix = "0.13"
actix-web = { version = "4.0", features = ["openssl", "cookies", "secure-cookies"] }
actix-http = "3.0"
actix-service = "2.0"
actix-rt = "2.8"
actix-cors = "0.6"
actix-web-actors = "4.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
getrandom = "0.2"
bytestring = "1.0"

# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-serde_json-1"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
postgis = "0.9"

# Async Runtime
tokio = { version = "1.28", features = ["full", "macros", "rt-multi-thread", "sync", "time", "parking_lot"] }
futures = { version = "0.3", features = ["std", "async-await"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.0"
hex = "0.4"

# Logging
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = { version = "0.10", features = ["auto-color", "humantime"] }
tracing = { version = "0.1", features = ["attributes", "async-await"] }

# Common Security
sha2 = { version = "0.10", features = ["std"] }
ring = { version = "0.16", features = ["std"] }
base64 = { version = "0.21", features = ["std"] }

# Common Image Processing
image = { version = "0.24", features = ["png", "jpeg"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
