[package]
name = "handreceipt"
version = "0.1.0"
edition = "2021"
authors = ["Your Organization"]
description = "Military property management system with QR codes and blockchain verification"
license = "MIT"

[dependencies]
# Web Framework
actix-web = { workspace = true }
actix-http = { workspace = true }
actix-service = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }

# Async Runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Core Utils
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
env_logger = { workspace = true }

# Security
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
ring = { workspace = true }

# QR Code
qrcode = { version = "0.12", features = ["svg"] }

# Configuration
dotenv = { workspace = true }
config = { version = "0.13", features = ["yaml"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
rstest = { version = "0.18", features = ["async-timeout"] }
mockall = "0.12"
wiremock = "0.5"
test-log = { version = "0.2", features = ["trace"] }

[features]
default = ["standard-security"]

# Security Levels
standard-security = []
military-grade = [
    "quantum-resistant",
    "hardware-security"
]

# Optional Features
quantum-resistant = []
hardware-security = []

[[bin]]
name = "handreceipt"
path = "src/main.rs"

[lib]
name = "handreceipt"
path = "src/lib.rs"
