# mobile/Cargo.toml

[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
handreceipt = { path = "../backend" }

# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }

# Scanning-specific dependencies
serialport = "4.2"
quircs = { version = "0.10", optional = true }

# Mesh networking
libp2p = { version = "0.50", features = [
    "tcp",
    "mdns",
    "floodsub",
    "noise",
    "mplex",
    "yamux",
    "ping",
    "request-response"
], optional = true }

[features]
default = ["mock-rfid"]
mock-rfid = []
real-rfid = []
mesh-network = ["dep:libp2p"]
scanning = ["dep:quircs"]
