[package]
name = "backend-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
# Use workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
postgis = { workspace = true }
sqlx = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }

# Test-specific dependencies
mockall = { version = "0.12", features = ["nightly"] }
rand = "0.8"
pretty_assertions = "1.4"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Reference the backend crate
[dependencies.backend]
path = ".."

[features]
default = ["test-utils"]
test-utils = []
integration-tests = []
mesh-network-tests = ["backend/mesh-network"]
scanning-tests = ["backend/scanning"]
