[package]
name = "backend-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
# Use workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }

# Test-specific dependencies
mockall = { version = "0.12", features = ["nightly"] }
rand = "0.8"
pretty_assertions = "1.4"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
actix-web = { version = "4.4", features = ["openssl"] }
actix-http = "3.4"

# Reference the backend crate
[dependencies.backend]
path = ".."

[features]
default = ["test-utils"]
test-utils = []
integration-tests = []
scanning-tests = ["backend/scanning"]
