[package]
name = "handreceipt-mobile-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["std"] }

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }

# Utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
image = "0.24"
quircs = "0.10"

# FFI
jni = { version = "0.21", optional = true }

# Error handling
thiserror = "1.0"

[features]
default = []
android = ["jni"]
ios = []

[lib]
name = "handreceipt_mobile_core"
crate-type = ["staticlib", "cdylib", "rlib"]
  