[package]
name = "handreceipt-mobile-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "handreceipt_mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
ed25519-dalek = "2.0"
base64 = "0.21"
quircs = "0.10"
image = "0.24"
async-trait = "0.1"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
futures = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2" 