[package]
name = "handreceipt-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "handreceipt_mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Platform-agnostic dependencies
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
lazy_static = "1.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
async-trait = "0.1"
ed25519-dalek = { version = "2.0", features = ["std", "rand_core"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
image = "0.24"
quircs = "0.10"
sawtooth-sdk = "0.5"
sawtooth-xo = "0.4"
sha3 = "0.10"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
prost = "0.11"
tonic = "0.9"
crossbeam-channel = "0.5"
futures = "0.3"
protobuf = "2.28"

# Platform-specific (mark as optional)
jni = { version = "0.21", optional = true }
android_logger = { version = "0.13", optional = true }
oslog = { version = "0.2", optional = true }

# Add back required iOS dependencies
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
mockall = "0.11"

[features]
default = ["android"]
android = [
    "dep:jni", 
    "dep:android_logger",
    "dep:ndk",
    "dep:ndk-sys"
]
ios = [
    "dep:oslog",
    "dep:objc", 
    "dep:block"
]

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = { version = "0.4", optional = true }
ndk = { version = "0.7", optional = true }
jni = { version = "0.21", optional = true }
android_logger = { version = "0.13", optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
block = "0.1"
oslog = { version = "0.2", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
incremental = false
  