[package]
name = "mats-diagnostics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Metrics (keep versions aligned with backend)
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
prometheus = { version = "0.13", features = ["process"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System diagnostics
sysinfo = "0.29"
procfs = "0.15"

# Network diagnostics
ping = "0.5"
trust-dns-resolver = "0.22"

# Path handling
glob = "0.3"

# Optional backend integration
backend = { path = "../..", optional = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[features]
default = []
backend-integration = ["dep:backend"]
mesh-diagnostics = ["backend-integration", "backend/mesh-network"]
